fix: increase all modals z-index to 99999

--- a/css/formulaire.css
+++ b/css/formulaire.css
@@ -9,7 +9,7 @@
   left: 0 !important;
   right: 0 !important;
   bottom: 0 !important;
-  z-index: 10000;
+  z-index: 99999;
   display: flex;
   align-items: center;
   justify-content: center;
